[package]
name = "learnable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "03f4cc5dde5e35798b7d3912cd3133696f471085", features = [
#   "dynamic_linking",
# ] }
rand = "0.8.5"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [lints.rust]
# missing-docs = "warn"

[lints.clippy]
# pedantic = "warn"
# nursery = "warn"
needless_pass_by_value = "allow"
module_name_repetitions = "allow"
