[package]
name = "learnable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.13.2"
bevy_gizmos = { version = "0.13.2", features = [
  "bevy_pbr",
  "bevy_sprite",
  "webgl",
  "webgpu",
] }
bevy_reflect = { version = "0.13.2", features = [
  "bevy",
  "bevy_math",
  "documentation",
  "glam",
  "smallvec",
  "smol_str",
] }
bevy_simple_text_input = "0.7.0"
futures = "0.3.30"
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "03f4cc5dde5e35798b7d3912cd3133696f471085", features = [
#   "dynamic_linking",
# ] }
bevy = { version = "0.13.2" }


rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"
bevy_http_client = "0.5.2"
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
] }
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.42"

[features]
desktop = ["bevy/dynamic_linking"]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [lints.rust]
# missing-docs = "warn"

[lints.clippy]
# pedantic = "warn"
# nursery = "warn"
needless_pass_by_value = "allow"
module_name_repetitions = "allow"
